add more planets

--- a/planet/index.html
+++ b/planet/index.html
@@ -24,6 +24,9 @@
         <h1 class="text-9xl font-bold tracking-lighter heading">Mars</h1>
         <h1 class="text-9xl font-bold tracking-lighter heading">Mercury</h1>
         <h1 class="text-9xl font-bold tracking-lighter heading">Venus</h1>
+        <h1 class="text-9xl font-bold tracking-lighter heading">Jupiter</h1>
+        <h1 class="text-9xl font-bold tracking-lighter heading">Neptune</h1>
+
         </div>
         <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         <div class="w-100 h-px bg-gradient-to-r from-transparent via-white to-transparent mt-4 "></div>
