--- a/import-3d-model/index.html
+++ b/import-3d-model/index.html
@@ -7,6 +7,28 @@
     <title>import-3d-model</title>
   </head>
   <body>
+     <h1 id="title" style="
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 48px;
+    pointer-events: none;
+  ">
+    Cool Eye Model 🧐
+  </h1>
+  <p style="
+    position: absolute;
+    top: 90px;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 28px;
+    pointer-events: none;
+  ">We import 3D models in Three.js using GLTFLoader, which loads .glb or .gltf files. After loading, the model is added to the scene and can be scaled, positioned, and animated.</p>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
