--- a/import-3d-model/index.html
+++ b/import-3d-model/index.html
@@ -12,19 +12,19 @@
     top: 20px;
     width: 100%;
     text-align: center;
-    color: white;
+    color: rgb(5, 5, 5);
     font-family: Arial, sans-serif;
     font-size: 48px;
     pointer-events: none;
   ">
-    Cool Eye Model 🧐
+    🏁 Car Model 🏁
   </h1>
   <p style="
     position: absolute;
     top: 90px;
     width: 100%;
     text-align: center;
-    color: white;
+    color: rgb(15, 14, 14);
     font-family: Arial, sans-serif;
     font-size: 28px;
     pointer-events: none;
