--- a/import-3d-model/index.html
+++ b/import-3d-model/index.html
@@ -17,7 +17,7 @@
     font-size: 48px;
     pointer-events: none;
   ">
-    🏁 Car Model 🏁
+    💣 Gun Model 💣
   </h1>
   <p style="
     position: absolute;
